--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/teimur8/nodejs#readme",
   "dependencies": {
     "ansi": "^0.3.1",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "request": "^2.85.0"
   }
 }
