--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/teimur8/nodejs#readme",
   "dependencies": {
     "ansi": "^0.3.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
     "minimist": "^1.2.0",
     "request": "^2.85.0"
   }
