--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "minimist": "^1.2.0",
+    "pug": "^2.0.3",
     "request": "^2.85.0"
   }
 }
